Fix summary image size on iPhone 6

--- a/src/assets/styles/gameUI.css
+++ b/src/assets/styles/gameUI.css
@@ -175,7 +175,7 @@
     .dragImg,
     .backgroundImg,
     .imageFit {
-        max-height: 56vh;
+        max-height: 52vh;
     }
 }
 
@@ -184,7 +184,7 @@
     .dragImg,
     .backgroundImg,
     .imageFit {
-        max-height: 58vh;
+        max-height: 54vh;
     }
 }
 
@@ -193,7 +193,7 @@
     .dragImg,
     .backgroundImg,
     .imageFit {
-        max-height: 62vh;
+        max-height: 58vh;
     }
 }
 
@@ -202,7 +202,7 @@
     .dragImg,
     .backgroundImg,
     .imageFit {
-        max-height: 68vh;
+        max-height: 64vh;
     }
 }
 
